--- a/login.html
+++ b/login.html
@@ -6,18 +6,44 @@
     <title>X. Yang sedang hangat dibicarakan</title>
     <link rel="icon" href="src/img/x.svg">
     <link rel="stylesheet" href="src/output.css">
+    <script src="https://kit.fontawesome.com/a363c6a721.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-black">
     <!-- container start left -->
-    <div class="grid grid-cols-2 mt-20">
-        <div class="flex mx-auto my-40 px-4">
+    <div class="flex mx-auto justify-center flex-row mt-20">
+        <div class="flex mx-auto my-40">
             <img src="src/img/x.webp" alt="x" class="w-[200px]">
         </div>
 
         <!-- kanan -->
-        <div>
+        <div class="mr-6">
             <h1 class="text-white text-7xl font-semibold">Sedang tren saat ini</h1>
+            <h2 class="text-white text-[40px] font-semibold my-6">Bergabunglah sekarang.</h2>
+        
+            <div class="flex flex-col w-1/2 gap-6 justify-start">
+                <a href="#" class="h-10 w-[300px] px-4 items-center py-2 bg-white rounded-3xl text-sm ">Login dengan google <span class="flex justify-end -my-4"><i class="fa-brands fa-google fa-fade"></i></span> </a>
+                <a href="#" class="h-10 w-[300px] px-4 items-center py-2 bg-white rounded-3xl text-sm text-center "><span class="text-lg font-bold"><i class="fa-brands fa-apple fa-fade h-8 mr-2"></i>Daftar dengan Apple </span></a>
+           
+            <div class=" flex justify-center items-center">
+                <p class="font-bold text-white">atau</p>
+                <hr class="">
+            </div>  
+            <div class="flex justify-center items-center mr-4">
+                <a href="#" class="h-10 w-[300px] py-2 bg-blue-400 text-white rounded-3xl px-4 text-center font-semibold">Buat Akun</a>
+            </div>
+            <div class="flex justify-center items-center">
+                <p class="text-slate-200 text-[10px]">Dengan mendaftar, Anda menyetujui Persyaratan Layanan dan Kebijakan Privasi, termasuk Penggunaan Kuki.</p>
+            </div>
+
+            <div class="mt-5">
+                <h4 class="text-white text-4xl font-bold">Sudah punya akun?</h4>
+            </div>
+            <div class="flex justify-center items-center">
+                <a href="#" class="text-white h-10 w-[320px] py-2 items-center bg-black hover:opacity-80 cursor-pointer border-2 rounded-3xl px-4 text-center font-semibold">Masuk</a>
+            </div>
+            </div>
         </div>
+
     </div>
     <!-- container end left -->
 </body>
