--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-black">
     <!-- container start left -->
-    <div class="flex mx-auto justify-center flex-row mt-20">
+    <div class="flex mx-auto justify-center md:flex-row mt-20">
         <div class="flex mx-auto my-40">
             <img src="src/img/x.webp" alt="x" class="w-[200px]">
         </div>
@@ -28,7 +28,7 @@
                 <p class="font-bold text-white">atau</p>
                 <hr class="">
             </div>  
-            <div class="flex justify-center items-center mr-4">
+            <div class="flex flex-wrap justify-center items-center mr-4">
                 <a href="#" class="h-10 w-[300px] py-2 bg-blue-400 text-white rounded-3xl px-4 text-center font-semibold">Buat Akun</a>
             </div>
             <div class="flex justify-center items-center">
@@ -36,15 +36,42 @@
             </div>
 
             <div class="mt-5">
-                <h4 class="text-white text-4xl font-bold">Sudah punya akun?</h4>
+                <h4 class="text-white text-2xl font-bold">Sudah punya akun?</h4>
             </div>
             <div class="flex justify-center items-center">
-                <a href="#" class="text-white h-10 w-[320px] py-2 items-center bg-black hover:opacity-80 cursor-pointer border-2 rounded-3xl px-4 text-center font-semibold">Masuk</a>
+                <a href="#" class="text-sky-500 h-10 w-[320px] py-2 items-center bg-transparent hover:opacity-80 cursor-pointer border-2 rounded-3xl px-4 text-center font-semibold">Masuk</a>
             </div>
             </div>
         </div>
 
     </div>
     <!-- container end left -->
+<!-- footer start -->
+<div class=" px-4 footer mt-10 font-thin text-sm flex flex-wrap text-wrap mx-auto mb-10">
+    <div class=" flex flex-wrap text-slate-400 justify-center items-center mx-auto gap-2 mb-10">
+        <a href="#">Tentang</a>
+        <a href="#">Unduh aplikasi X</a>
+        <a href="#">Pusat Bantuan</a>
+        <a href="#">Persyaratan Layanan</a>
+        <a href="#">Kebijakan Privasi</a>
+        <a href="#">Kebijakan Penggunaan</a>
+        <a href="#">Aksesbilitas</a>
+        <a href="#">Informasi Iklan</a>
+        <a href="#">Blog</a>
+        <a href="#">Status</a>
+        <a href="#">Karier</a>
+        <a href="#">Sumber Daya Merek</a>
+        <a href="#">Periklanan</a>
+        <a href="#">Pemasaran</a>
+        <a href="#">X untuk bisnis</a>
+        <a href="#">Pengembang</a>
+        <a href="#">Direktori</a>
+        <a href="#">Pengaturan</a>
+        <a href="#">&#169; 2024 X Corp</a>
+    </div>
+</div>
+<!-- footer end -->
+
+
 </body>
 </html>
