--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ input {
             </div>
           <span class="close text-white flex justify-end cursor-pointer h-9 -translate-x-2 hover:opacity-80 p-4" onclick="closeSignupModal()">&times;</span>
           <p class="text-2xl font-semibold my-4">Buat Akun</p>
-          <input type="text" id="username" name="username" placeholder="Nama" required>
-          <input type="email" id="email" name="email" placeholder="Email" required>
-          <input type="password" id="pass" name="password" placeholder="Kata Sandi">
+          <input type="text" id="username" name="username" placeholder="Nama" class="text-black" required>
+          <input type="email" id="email" name="email" placeholder="Email" class="text-black" required>
+          <input type="password" id="pass" name="password" placeholder="Kata Sandi" class="text-black" required>
 
           <p class="text-xs font-semibold mb-2">Tanggal lahir</p>
           <p class=" flex flex-wrap text-[12px] font-thin text-wrap mb-4">Ini tidak akan ditampilkan secara publik. Konfirmasikan usia Anda sendiri, <br> bahkan jika akun ini digunakan untuk bisnis, hewan peliharaan, atau tujuan lainnya</p>
