--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="src/img/x.webp">
     <link rel="stylesheet" href="src/output.css">
     <script src="https://kit.fontawesome.com/a363c6a721.js" crossorigin="anonymous"></script>
+    <script src="src/js/script.js"></script>
 <style>
     #signupModal {
         display: none;
